BEAUT-1113: [BUG-Beautify][Mobile] Event details: Booking number and -/+ not matched alignment

--- a/beautify-la/public/content/style.css
+++ b/beautify-la/public/content/style.css
@@ -10693,8 +10693,9 @@ div.placeholder-custom {
               background-size: 24px auto;
               width: 24px;
               height: 24px;
+              padding: 0;
               position: relative;
-              bottom: -1px; }
+              bottom: -3px; }
               @media (max-width: 767px) {
                 .event-page .event-section .grab .item ul.footer > li ul li button {
                   width: 18px;
