--- a/beautify-la/src/assets/css/sass/pages/event/_grab.scss
+++ b/beautify-la/src/assets/css/sass/pages/event/_grab.scss
@@ -193,8 +193,9 @@
                                         background-size: 24px auto;
                                         width: 24px;
                                         height: 24px;
+                                        padding: 0;
                                         position: relative;
-                                        bottom: -1px;
+                                        bottom: -3px;
 
                                         @media (max-width: 767px){
                                             width: 18px;
